<resources>
    <string name="app_name">YourKey</string>
    <string name="flat">♭</string>
    <string name="sharp">♯</string>
    <string name="start_text">♯と♭の数を入力してください</string>
    <string name="sharp_number_hint">＃は何個？</string>
    <string name="flat_number_hint">♭は何個？</string>
    <string name="input_text">調を調べる</string>
    <string name="key_answer_sharp_dur_text">♯系の長調</string>
    <string name="key_answer_sharp_moll_text">♯系の短調</string>
    <string name="key_answer_flat_dur_text">♭系の長調</string>
    <string name="key_answer_flat_moll_text">♭系の短調</string>
</resources>